--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
+    "apphub": "^0.2.2",
     "moment": "^2.10.6",
     "react-native": "^0.14.2",
     "react-timer-mixin": "^0.13.3",
