--- a/simulatedData/Areas.json
+++ b/simulatedData/Areas.json
@@ -7,7 +7,7 @@
       "entityId": 10,
       "parentEntityId": 1,
       "category": "Data",
-      "parentKpi": "Accessibility",
+      "kpi": "Accessibility",
       "dailyAverage": 99,
       "unit": "%",
       "thresholds":
@@ -49,7 +49,7 @@
       "entityId": 10,
       "parentEntityId": 1,
       "category": "Data",
-      "parentKpi": "Retainability",
+      "kpi": "Retainability",
       "dailyAverage": 97,
       "unit": "%",
       "thresholds":
@@ -91,7 +91,7 @@
       "entityId": 10,
       "parentEntityId": 1,
       "category": "Downlink",
-      "parentKpi": "Throughput",
+      "kpi": "Throughput",
       "dailyAverage": 1.0,
       "unit": "Mbps",
       "thresholds":
@@ -133,7 +133,7 @@
       "entityId": 10,
       "parentEntityId": 1,
       "category": "Uplink",
-      "parentKpi": "Throughput",
+      "kpi": "Throughput",
       "dailyAverage": 1.1,
       "unit": "Mbps",
       "thresholds":
@@ -175,7 +175,7 @@
       "entityId": 10,
       "parentEntityId": 1,
       "category": "Data",
-      "parentKpi": "TNOL",
+      "kpi": "TNOL",
       "dailyAverage": 9,
       "unit": "%",
       "thresholds":
@@ -217,7 +217,7 @@
       "entityId": 10,
       "parentEntityId": 1,
       "category": "VoLTE",
-      "parentKpi": "Accessibility",
+      "kpi": "Accessibility",
       "dailyAverage": 99,
       "unit": "%",
       "thresholds":
@@ -259,7 +259,7 @@
       "entityId": 10,
       "parentEntityId": 1,
       "category": "VoLTE",
-      "parentKpi": "Retainability",
+      "kpi": "Retainability",
       "dailyAverage": 98,
       "unit": "%",
       "thresholds":
