--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "apphub": "^0.2.2",
+    "events": "^1.1.0",
+    "gb-native-router": "^0.5.0",
     "moment": "^2.10.6",
     "react-native": "^0.15.0",
     "react-timer-mixin": "^0.13.3",
