--- a/simulatedData/Areas.json
+++ b/simulatedData/Areas.json
@@ -174,14 +174,14 @@
       "geoEntity": "area",
       "entityId": 10,
       "parentEntityId": 1,
-      "category": "Data",
-      "kpi": "TNOL",
+      "category": "CS",
+      "kpi": "Fallback",
       "dailyAverage": 9,
       "unit": "%",
       "thresholds":
         {
-          "red": 30,
-          "green": 10
+          "red": 10,
+          "green": 5
         },
       "data":
       [
@@ -209,90 +209,6 @@
         ["21", 8],
         ["22", 16],
         ["23", 10]
-      ]
-    },
-    {
-      "name": "Central Valley",
-      "geoEntity": "area",
-      "entityId": 10,
-      "parentEntityId": 1,
-      "category": "VoLTE",
-      "kpi": "Accessibility",
-      "dailyAverage": 99,
-      "unit": "%",
-      "thresholds":
-        {
-          "red": 97,
-          "green": 99
-        },
-      "data":
-      [
-        ["00", 97],
-        ["01", 100],
-        ["02", 99],
-        ["03", 97],
-        ["04", 100],
-        ["05", 100],
-        ["06", 100],
-        ["07", 97],
-        ["08", 99],
-        ["09", 100],
-        ["10", 96],
-        ["11", 99],
-        ["12", 99],
-        ["13", 100],
-        ["14", 100],
-        ["15", 100],
-        ["16", 100],
-        ["17", 99],
-        ["18", 100],
-        ["19", 100],
-        ["20", 98],
-        ["21", 99],
-        ["22", 100],
-        ["23", 100]
-      ]
-    },
-    {
-      "name": "Central Valley",
-      "geoEntity": "area",
-      "entityId": 10,
-      "parentEntityId": 1,
-      "category": "VoLTE",
-      "kpi": "Retainability",
-      "dailyAverage": 98,
-      "unit": "%",
-      "thresholds":
-        {
-          "red": 97,
-          "green": 99
-        },
-      "data":
-      [
-        ["00", 98],
-        ["01", 97],
-        ["02", 99],
-        ["03", 99],
-        ["04", 100],
-        ["05", 99],
-        ["06", 100],
-        ["07", 98],
-        ["08", 99],
-        ["09", 97],
-        ["10", 100],
-        ["11", 98],
-        ["12", 97],
-        ["13", 100],
-        ["14", 99],
-        ["15", 100],
-        ["16", 99],
-        ["17", 100],
-        ["18", 98],
-        ["19", 99],
-        ["20", 99],
-        ["21", 97],
-        ["22", 100],
-        ["23", 99]
       ]
     }
   ]
