Revised logo and added reserved space for sector counts in Area/Zone performance screen

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gb-native-router": "^0.5.0",
     "moment": "^2.10.6",
     "react-native": "facebook/react-native#8ec052a",
+    "react-native-orientation": "^1.9.0",
     "react-timer-mixin": "^0.13.3",
     "react-tween-state": "^0.1.3"
   }
