--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "events": "^1.1.0",
     "gb-native-router": "^0.5.0",
     "moment": "^2.10.6",
-    "react-native": "facebook/react-native#8ec052a",
+    "react-native": "^0.17.0",
     "react-native-orientation": "^1.9.0",
     "react-timer-mixin": "^0.13.3",
     "react-tween-state": "^0.1.3"
