(1) integreated with the backined on Area/Zone/Sector/SectorDetails scenes. (2) The sector azimuth is working with the simulated zones/sectors location files.  (3) Sector azimuth graphics are in and working. (4) The selected sector shows sector anme and the unselected sectors show the site name.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "events": "^1.1.0",
     "gb-native-router": "^0.5.0",
     "moment": "^2.10.6",
-    "react-native": "^0.17.0",
+    "react-native": "facebook/react-native#97fe0ea",
     "react-native-orientation": "^1.9.0",
     "react-timer-mixin": "^0.13.3",
     "react-tween-state": "^0.1.3"
