--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "events": "^1.1.0",
     "gb-native-router": "^0.5.0",
     "moment": "^2.10.6",
+    "parse": "^1.6.13",
+    "parse-react": "^0.5.0",
     "react-native": "facebook/react-native#97fe0ea",
     "react-native-orientation": "^1.9.0",
     "react-timer-mixin": "^0.13.3",
