--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "parse-react": "^0.5.0",
     "react-dom": "^0.14.6",
     "react-native": "^0.18.1",
+    "react-native-image-picker": "^0.13.1",
     "react-native-intercom": "0.0.4",
     "react-native-orientation": "^1.9.0",
     "react-native-remote-push": "^1.0.3",
