--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "apphub": "^0.2.2",
     "events": "^1.1.0",
     "gb-native-router": "^0.5.0",
+    "keymirror": "^0.1.1",
     "moment": "^2.10.6",
     "parse": "^1.6.13",
     "parse-react": "^0.5.0",
     "react-dom": "^0.14.6",
-    "react-native": "^0.18.1",
+    "react-native": "^0.19.0-rc",
     "react-native-image-picker": "^0.13.1",
     "react-native-intercom": "0.0.4",
     "react-native-orientation": "^1.9.0",
     "react-native-remote-push": "^1.0.3",
+    "react-native-sglistview": "^0.1.3",
     "react-native-storage": "0.0.10",
     "react-timer-mixin": "^0.13.3",
     "react-tween-state": "^0.1.3"
