--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-image-picker": "^0.13.1",
     "react-native-intercom": "0.0.4",
     "react-native-orientation": "^1.9.0",
+    "react-native-refreshable-listview": "^1.3.0",
     "react-native-remote-push": "^1.0.3",
     "react-native-sglistview": "^0.1.3",
     "react-native-storage": "0.0.10",
