--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-remote-push": "^1.0.3",
     "react-native-sglistview": "^0.1.3",
     "react-native-storage": "0.0.10",
+    "react-native-swiper": "^1.4.3",
     "react-timer-mixin": "^0.13.3",
     "react-tween-state": "^0.1.3"
   }
