--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-image-picker": "^0.13.1",
     "react-native-intercom": "0.0.4",
     "react-native-invertible-scroll-view": "^0.2.0",
+    "react-native-inviewport": "^1.1.0",
     "react-native-orientation": "^1.9.0",
     "react-native-refreshable-listview": "^1.3.0",
     "react-native-remote-push": "^1.0.3",
