--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "parse": "^1.6.13",
     "parse-react": "^0.5.0",
     "react-dom": "^0.14.6",
-    "react-native": "^0.19.0-rc",
+    "react-native": "^0.20.0",
     "react-native-image-picker": "^0.13.1",
     "react-native-intercom": "0.0.4",
     "react-native-invertible-scroll-view": "^0.2.0",
