--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,6 @@ DerivedData
 *.ipa
 *.xcuserstate
 project.xcworkspace
-*.jsbundle
 
 # Android/IJ
 #
@@ -31,6 +30,7 @@ local.properties
 
 # node.js
 #
+node_modules/
 npm-debug.log
 
 node_modules/*
