--- a/package.json
+++ b/package.json
@@ -15,15 +15,21 @@
     "parse-react": "^0.5.0",
     "react-dom": "^0.14.6",
     "react-native": "^0.21.0",
+    "react-native-button": "^1.4.2",
+    "react-native-debug-stylesheet": "^0.1.1",
     "react-native-image-picker": "^0.13.1",
     "react-native-intercom": "0.0.4",
     "react-native-invertible-scroll-view": "^0.2.0",
+    "react-native-modalbox": "^1.3.1",
     "react-native-orientation": "^1.9.0",
     "react-native-refreshable-listview": "^1.3.0",
+    "react-native-router-flux": "^2.3.9",
     "react-native-sglistview": "^0.1.3",
     "react-native-storage": "0.0.10",
     "react-native-swiper": "^1.4.3",
+    "react-redux": "^4.4.1",
     "react-timer-mixin": "^0.13.3",
-    "react-tween-state": "^0.1.3"
+    "react-tween-state": "^0.1.3",
+    "redux": "^3.3.1"
   }
 }
