--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "parse-react": "^0.5.0",
     "react-dom": "^0.14.6",
     "react-native": "^0.21.0",
+    "react-native-auto-updater": "^0.2.5",
     "react-native-button": "^1.4.2",
     "react-native-debug-stylesheet": "^0.1.1",
     "react-native-image-picker": "^0.13.1",
