--- a/package.json
+++ b/package.json
@@ -6,28 +6,24 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "events": "^1.1.0",
-    "keymirror": "^0.1.1",
-    "moment": "^2.10.6",
-    "moment-timezone": "^0.5.0",
-    "parse": "^1.6.13",
-    "parse-react": "^0.5.0",
-    "react-dom": "^0.14.6",
-    "react-native": "^0.21.0",
+    "moment": "^2.12.0",
+    "moment-timezone": "^0.5.3",
+    "parse": "^1.8.1",
+    "parse-react": "^0.5.1",
+    "react": "^0.14.7",
+    "react-native": "^0.22.2",
     "react-native-auto-updater": "^0.2.5",
-    "react-native-button": "^1.4.2",
     "react-native-debug-stylesheet": "^0.1.1",
-    "react-native-image-picker": "^0.13.1",
+    "react-native-image-picker": "^0.18.3",
     "react-native-intercom": "0.0.4",
-    "react-native-orientation": "^1.9.0",
+    "react-native-orientation": "^1.15.0",
     "react-native-refreshable-listview": "^1.3.0",
     "react-native-router-flux": "^2.3.13",
-    "react-native-sglistview": "^0.1.3",
-    "react-native-storage": "0.0.10",
+    "react-native-sglistview": "^0.1.4",
+    "react-native-storage": "0.0.16",
     "react-native-swiper": "^1.4.3",
     "react-redux": "^4.4.1",
     "react-timer-mixin": "^0.13.3",
-    "react-tween-state": "^0.1.3",
     "redux": "^3.3.1"
   }
 }
